--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap");
+
 :root {
   --primary-color: #2a2f4b;
 }
@@ -6,7 +7,7 @@
 body {
   background: #aba8a8;
   margin: 0;
-  font-family: 'Poppins';
+  font-family: 'Poppins', sans-serif;
 }
 
 .navbar {
@@ -24,6 +25,7 @@ body {
 .navbar .logo span {
   color: var(--primary-color);
 }
+
 .navbar nav {
   display: none;
 }
@@ -32,29 +34,51 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  place-content: space-between;
+  justify-content: space-between;
 }
-.navbar .container{
-display: -webkit-box;
-display: -ms-flexbox;
-display: flex;
-place-content: space-between;
 
-}
-.navbar .mobile-menu{
+.navbar .mobile-menu {
   cursor: pointer;
 }
-a{
-  color: #2a2f4b;
+
+a {
+  color: var(--primary-color);
 }
-ul{
+
+ul {
   list-style-type: none;
   margin: 0;
-  padding: 0%;
+  padding: 0;
 }
-section{ 
+
+section { 
   padding: auto;
 }
-.hero{
+
+.hero {
   text-align: center;
+}
+
+.left-col .subhead {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: rgb(217, 207, 207);
+  letter-spacing: .3em;
+}
+
+.left-col h1 {
+  font-size: 2.5em;
+  line-height: 1.3em;
+  margin-top: .2em;
+}
+
+.left-col .primary-cta {
+  background: var(--primary-color);
+  color: white;
+  text-decoration: none;
+  padding: .6em 1.3em;
+  font-size: 1.4em;
+  border-radius: 5em;
+  font-weight: bold;
+  display: inline-block;
 }
