--- a/style.css
+++ b/style.css
@@ -67,8 +67,8 @@ section {
 }
 
 .left-col h1 {
-  font-size: 2.5em;
-  line-height: 1.3em;
+  font-size: 2.em;
+  line-height: 1.em;
   margin-top: .2em;
 }
 
