--- a/style.css
+++ b/style.css
@@ -263,6 +263,13 @@ span {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+#submit-form {
+  width: 40%;
+  background-color: var(--secondary-color);
+  border-radius: 5px;
+  padding: 15px;
+}
+
 .form-group {
   margin-bottom: 15px;
 }
